# junk-messenger

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  env.yml  exportenv.sh
db/: accounts.pkl  posts.pkl
pki/: ca.crt  index.txt  safessl-easyrsa.cnf  serial  serial.old
pki/issued/: CN PROJECT.crt
pki/private/: CN PROJECT.key  ca.key
pki/reqs/: CN PROJECT.req
play/: 000.ts  001.ts  002.ts  003.ts  004.ts  005.ts  006.ts  007.ts  008.ts  009.ts  010.ts  011.ts  012.ts  013.ts  014.ts  015.ts  016.ts  017.ts  018.ts  019.ts  020.ts  021.ts  022.ts  023.ts  024.ts  025.ts  026.ts  027.ts  028.ts  029.ts  030.ts  031.ts  032.ts  033.ts  034.ts  035.ts  036.ts  037.ts  038.ts  039.ts  (+63 more)
src/: MultimediaClient.py  MultimediaServer.py  RtspServer.py  TODO.txt  common.py  debug.h  http_request.hpp  http_server.hpp  logging.h  main.c  main.cpp  run_audience.py  run_client.py  run_server.py  run_stream.py  segment_generator.py  simple_client.py  utils.py
src/junk_messenger/: __init__.py  account.py  event.py  post.py  server.py  session.py  utils.py
www/: index.html
